Bug 1220438 - Correct baseline offset computation of text decoration for vertical-rl. r=jfkthame

MozReview-Commit-ID: 5VHapeQ6mBU

--HG--
extra : rebase_source : 9814a77550a0d2125f6d3ba7e55594929b65fd8b